# instant-cut

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.vue  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  main.rs  media.rs  utils.rs  video.rs
src/components/: FileSelector.vue  Timeline.vue  TimelineControls.vue  Toast.vue  VideoInfo.vue  VideoPlayer.vue
src/composables/: useToast.ts
src/utils/: timeUtils.ts
