[package]
name = "fast-video-cutter"
version = "1.0.0"
description = "A minimalist video cutting tool"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
sysinfo = "0.30"

[dependencies.tauri-plugin-fs]
version = "2"
features = ["watch"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-dialog = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
